--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,10 @@ MatlabAPI/analyze*/
 MatlabAPI/visualize*/
 MatlabAPI/private/maskApiMex.*
 
-PythonAPI/pycocotools/__init__.pyc
 PythonAPI/pycocotools/_mask.c
-PythonAPI/pycocotools/_mask.so
-PythonAPI/pycocotools/coco.pyc
-PythonAPI/pycocotools/cocoeval.pyc
-PythonAPI/pycocotools/mask.pyc
+*.so
+__pycache__
+*.egg-info
+build/
 
 .vscode/
